--- a/index.html
+++ b/index.html
@@ -27,34 +27,34 @@
     </header>
 
     <nav class="navbar">
-        <div class="Home">HOME</div>
-        <div class="Cinema">CINEMA</div>
-        <div class="Magazine">MAGAZINE</div>
-        <div class="CSSAUTHOR.COM">CSSAUTHOR.COM</div>
-        <div class="TOPMENU">TOPMENU</div>
-        <div class="ACHIEVES">ACHIEVES</div>
-        <div class="CONTACTUS">CONTACT US</div>
+        <div class="Home">Home</div>
+        <div class="Cinema">Cinema</div>
+        <div class="Magazine">Magazine</div>
+        <div class="CSSAUTHOR.COM">Cssauthor.com</div>
+        <div class="TOPMENU">Topmenu</div>
+        <div class="ACHIEVES">Archives</div>
+        <div class="CONTACTUS">Contact Us</div>
     </nav>
 
     <div class="topstories">
-        <h1>TOP STORIES</h1>
+        <h2>TOP STORIES</h2>
         <nav class="toprow">
             <div class="cinemabox">
                 <img src="" alt="">
-                <h3 class="cinematitle">CINEMA</h3>
-                <p>></p>
+                <h4 class="cinematitle">CINEMA</h4>
+                <p>Minions ipsum me want bananaaa! Bappleees pepete baboiii. Para tú po kass underweaaar tatata bala tu po kass hana dul sae daa poopayee bee do bee do bee do tatata bala tu.</p>
             </div>
 
             <div class="travelbox">
                 <img src="" alt="">
                 <h4 class="traveltitle">TRAVEL</h4>
-                <p>></p>
+                <p>Minions ipsum me want bananaaa! Bappleees pepete baboiii. Para tú po kass underweaaar tatata bala tu po kass hana dul sae daa poopayee bee do bee do bee do tatata bala tu.</p>
             </div>
 
             <div class="televisionbox">
                 <img src="" alt="">
                 <h4 class="televisiontitle">TELEVISION</h4>
-                <p>></p>
+                <p>Minions ipsum me want bananaaa! Bappleees pepete baboiii. Para tú po kass underweaaar tatata bala tu po kass hana dul sae daa poopayee bee do bee do bee do tatata bala tu.</p>
             </div>
 
         </nav>
@@ -85,23 +85,6 @@
                 <img src="" alt="">
             </div>
         </div>
-
-
-        <div class="Top-Stories">
-            <nav class="Top-Stories-Nav">
-                <div class="Top-Stories-Fasion">Fasion</div>
-                <div class="Top-Stories-Cinema">Cinema</div>
-                <div class="Top-Stories-Television">Television</div>
-            </nav>
-        </div>
-
-        <div class="Top-Stories-Contents">
-            <div class="content">
-                <img src="" alt="">
-                <h3 class="Top-Stories-Title"></h3>
-                <p class="Top-Stories-Description"></p>
-            </div>
-
-
-
+</div>
+</body>
 </html>
